# RTX

./: Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
src/: main.rs
