[package]
name    = "my_desktop_app"
version = "0.1.0"
authors = ["theking01"]
edition = "2021"

[dependencies]
# Dioxus Desktop
dioxus         = "0.7"
dioxus-desktop = "0.7"

# التقييم الحسابي
meval = "0.2"

# مكتبات إضافية (اختياريّة — احتفظت بما ذكرتَه)
aes-gcm     = "0.10"
sha2        = "0.10"
rand        = "0.8"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
rfd         = "0.15"
dirs        = "6.0"
chrono      = "0.4"
open        = "5.0"

[features]
default = []
