[package]
name    = "my_desktop_app"
version = "0.1.0"
authors = ["theking01"]
edition = "2021"

[dependencies]
# Dioxus Desktop
dioxus         = "0.7"
dioxus-desktop = "0.7"

# التقييم الحسابي
meval = "0.2"

# مكتبات التشفير
aes-gcm = "0.10"
sha2    = "0.10"
rand    = "0.8"

# مكتبات إضافية
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
dirs        = "6.0"
chrono      = "0.4"
open        = "5.0"

# لا نحتاج rfd - سنستخدم طريقة بديلة

[features]
default = []
